--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Guess The Song</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap"
+      rel="stylesheet"
+    />
+    <title>SonGuessr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
